--- a/frontend/login.html
+++ b/frontend/login.html
@@ -30,6 +30,12 @@
             background: goldenrod;
             border-color: goldenrod;
         }
+        .signUp-btn {
+            border-radius: 20px;
+            background: goldenrod;
+            border-color: goldenrod;
+            margin-left: 50%;
+        }
     </style>
 </head>
 <body>
@@ -48,7 +54,36 @@
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" required>
                     </div>
-                    <button type="submit" class="login-btn " style="width: auto;">Log in</button>
+                    <button type="submit" class="login-btn " style="width: auto;">Log In</button>
+                    <button id="signup-btn" class="signUp-btn " style="width: auto;" data-toggle="modal" data-target="#signupModal">Sign Up</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Signup Modal -->
+<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="signupModalLabel">Sign Up</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Signup Form -->
+                <form id="signup-form">
+                    <div class="form-group">
+                        <label for="signup-username">Username</label>
+                        <input type="text" class="form-control" id="signup-username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="signup-password">Password</label>
+                        <input type="password" class="form-control" id="signup-password" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Sign Up</button>
                 </form>
             </div>
         </div>
