--- a/frontend/login.html
+++ b/frontend/login.html
@@ -54,15 +54,8 @@
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" required>
                     </div>
-                    <div class="form-group">
-                        <label for="accessRole">Access Role</label>
-                        <select id="accessRole" name="accessRole">
-                            <option value="ADMIN">ADMIN</option>
-                            <option value="USER">USER</option>
-                        </select>
-                    </div>
                     <button type="submit" class="login-btn " style="width: auto;">Log In</button>
-                   <!-- <button id="signup-btn" class="signUp-btn " style="width: auto;" data-toggle="modal" data-target="#signupModal">Sign Up</button>-->
+                    <button id="signup-btn" class="signUp-btn " style="width: auto;" data-toggle="modal" data-target="#signupModal">Sign Up</button>
                 </form>
             </div>
         </div>
@@ -89,6 +82,13 @@
                     <div class="form-group">
                         <label for="signup-password">Password</label>
                         <input type="password" class="form-control" id="signup-password" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="accessRole">Access Role</label>
+                        <select id="accessRole" name="accessRole">
+                            <option value="ADMIN">ADMIN</option>
+                            <option value="USER">USER</option>
+                        </select>
                     </div>
                     <button type="submit" class="btn btn-primary">Sign Up</button>
                 </form>
