--- a/frontend/pages/inventory.html
+++ b/frontend/pages/inventory.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url("assets/images/stockists-mobile.webp");
+      background-image: url("../assets/images/stockists-mobile.webp");
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -105,7 +105,7 @@
 <div class="container">
   <h2>Item Information Form</h2>
   <div class="backBtn" onclick="goBack()">
-    <img src="assets/images/back.png" alt="Image">
+    <img src="../assets/images/back.png" alt="Image">
   </div>
   <form id="itemForm">
     <label for="itemCode">Item Code</label>
