updated user dashboard

--- a/frontend/pages/admin.html
+++ b/frontend/pages/admin.html
@@ -103,7 +103,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>Sales Information Form</h2>
+  <h2>Admin Information Form</h2>
   <div class="backBtn" onclick="goBack()">
     <img src="../assets/images/back.png" alt="Image">
   </div>
@@ -127,7 +127,7 @@
     <button type="submit">Submit</button>
   </form>
 
-  <h2>Sales Information Table</h2>
+  <h2>Admin Information Table</h2>
   <table>
     <thead>
     <tr>
