--- a/frontend/pages/userInventory.html
+++ b/frontend/pages/userInventory.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sale Service</title>
+  <title>Item Information</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -24,7 +24,7 @@
       z-index: -1; /* Ensure the overlay is behind the content */
     }
     .container {
-      max-width: 600px;
+      max-width: 800px;
       margin: 0 auto;
     }
     h2 {
@@ -41,7 +41,7 @@
       font-weight: bold;
     }
     input, select {
-      width: 100%;
+      width: calc(100% - 22px);
       padding: 8px;
       margin-bottom: 15px;
       border: 1px solid #ccc;
@@ -99,11 +99,15 @@
       height: 100%;
       object-fit: cover;
     }
+    #inventoryHead,#itemForm{
+      display: none;
+    }
+
   </style>
 </head>
 <body>
 <div class="container">
-  <h2>sales Information Form</h2>
+  <h2 id="inventoryHead">Item Information Form</h2>
   <div class="backBtn" onclick="goBack()">
     <img src="../assets/images/back.png" alt="Image">
   </div>
@@ -111,62 +115,62 @@
     <label for="itemCode">Item Code</label>
     <input type="text" id="itemCode" name="itemCode" required>
 
-    <label for="orderNo">Order No.</label>
-    <input type="text" id="orderNo" name="orderNo" required>
-
-    <label for="customerName">Customer Name</label>
-    <input type="text" id="customerName" name="customerName">
-
     <label for="itemDesc">Item Description</label>
     <input type="text" id="itemDesc" name="itemDesc" required>
 
+    <label for="quantity">Quantity</label>
+    <input type="number" id="quantity" name="quantity" required>
+
+    <label for="itemPicture">Item Picture (Base64)</label>
+    <input type="text" id="itemPicture" name="itemPicture">
+
+    <label for="category">Category</label>
+    <input type="text" id="category" name="category">
+
     <label for="size">Size</label>
-    <input type="number" id="size" name="size" required>
+    <input type="number" id="size" name="size">
 
-    <label for="unitPrice">Unit Price</label>
-    <input type="number" id="unitPrice" name="unitPrice" required>
+    <label for="supplierCode">Supplier Code</label>
+    <input type="text" id="supplierCode" name="supplierCode">
 
-    <label for="itemQty">Item Quantity</label>
-    <input type="number" id="itemQty" name="itemQty" required>
+    <label for="supplierName">Supplier Name</label>
+    <input type="text" id="supplierName" name="supplierName">
 
-    <label for="totalPrice">Total Price</label>
-    <input type="number" id="totalPrice" name="totalPrice" required>
+    <label for="unitPriceSale">Unit Price (Sale)</label>
+    <input type="number" id="unitPriceSale" name="unitPriceSale" step="0.01">
 
-    <label for="purchaseDate">Purchase Date</label>
-    <input type="datetime-local" id="purchaseDate" name="purchaseDate" required>
+    <label for="unitPriceBuy">Unit Price (Buy)</label>
+    <input type="number" id="unitPriceBuy" name="unitPriceBuy" step="0.01">
 
-    <label for="paymentMethod">Payment Method</label>
-    <select id="paymentMethod" name="paymentMethod" required>
-      <option value="">Select Payment Method</option>
-      <option value="Cash">Cash</option>
-      <option value="Card">Card</option>
-    </select>
+    <label for="expectedProfit">Expected Profit</label>
+    <input type="number" id="expectedProfit" name="expectedProfit" step="0.01">
 
-    <label for="addedPoints">Added Points</label>
-    <input type="number" id="addedPoints" name="addedPoints">
+    <label for="profitMargin">Profit Margin (%)</label>
+    <input type="number" id="profitMargin" name="profitMargin" step="0.01">
 
-    <label for="cashierName">Cashier Name</label>
-    <input type="text" id="cashierName" name="cashierName" required>
+    <label for="status">Status</label>
+    <input type="text" id="status" name="status">
 
     <button type="submit">Submit</button>
   </form>
 
-  <h2>sales Information Table</h2>
+  <h2>Item Information Table</h2>
   <table>
     <thead>
     <tr>
       <th>Item Code</th>
-      <th>Order No.</th>
-      <th>Customer Name</th>
       <th>Item Description</th>
+      <th>Quantity</th>
+      <th>Item Picture</th>
+      <th>Category</th>
       <th>Size</th>
-      <th>Unit Price</th>
-      <th>Item Quantity</th>
-      <th>Total Price</th>
-      <th>Purchase Date</th>
-      <th>Payment Method</th>
-      <th>Added Points</th>
-      <th>Cashier Name</th>
+      <th>Supplier Code</th>
+      <th>Supplier Name</th>
+      <th>Unit Price (Sale)</th>
+      <th>Unit Price (Buy)</th>
+      <th>Expected Profit</th>
+      <th>Profit Margin (%)</th>
+      <th>Status</th>
     </tr>
     </thead>
     <tbody id="itemTableBody">
@@ -184,4 +188,3 @@
 </script>
 </body>
 </html>
-``
