--- a/frontend/pages/customer.html
+++ b/frontend/pages/customer.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>Customer Information Form</title>
   <style>
     body {
@@ -107,6 +108,18 @@
   <div class="backBtn" onclick="goBack()">
     <img src="../assets/images/back.png" alt="Image">
   </div>
+  <div class="container mt-5 mb-5"> <!-- Added mb-5 for bottom margin -->
+    <div class="row">
+      <div class="col-md-6">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Enter Customer ID" aria-label="Enter Customer ID" aria-describedby="search-button">
+          <div class="input-group-append">
+            <button class="btn btn-primary" type="button" id="search-button">Search</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="form-container">
     <form id="customerForm">
       <label for="customerId">Customer ID</label>
@@ -163,7 +176,9 @@
       <label for="recentPurchaseDateTime">Recent Purchase Date and Time</label>
       <input type="datetime-local" id="recentPurchaseDateTime" name="recentPurchaseDateTime" required>
 
-      <button type="submit">Submit</button>
+      <button type="button" class="btn btn-success">Save</button>
+      <button type="button" class="btn btn-danger">Delete</button>
+      <button type="button" class="btn btn-warning">Update</button>
     </form>
   </div>
 
