--- a/frontend/pages/customer.html
+++ b/frontend/pages/customer.html
@@ -114,7 +114,7 @@
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Enter Customer ID" aria-label="Enter Customer ID" aria-describedby="search-button">
           <div class="input-group-append">
-            <button class="btn btn-primary" type="button" id="search-button">Search</button>
+            <button class="btn btn-primary" type="button" id="search_CId">Search</button>
           </div>
         </div>
       </div>
@@ -122,11 +122,11 @@
   </div>
   <div class="form-container">
     <form id="customerForm">
-      <label for="customerId">Customer ID</label>
-      <input type="text" id="customerId" name="customerId" required>
+      <label for="customerCode">Customer ID</label>
+      <input type="text" id="customerCode" name="customerCode" required>
 
       <label for="customerName">Customer Name</label>
-      <input type="text" id="customerName" name="customerName" required>
+      <input type="text" id="customerName" name="customerName" autocomplete="name" required>
 
       <label for="gender">Gender</label>
       <select id="gender" name="gender">
@@ -138,47 +138,47 @@
       <label for="joinDate">Join Date</label>
       <input type="date" id="joinDate" name="joinDate" required>
 
-      <label for="loyaltyLevel">Loyalty Level</label>
-      <select id="loyaltyLevel" name="loyaltyLevel">
+      <label for="level">Loyalty Level</label>
+      <select id="level" name="level">
         <option value="Gold">Gold</option>
         <option value="Silver">Silver</option>
         <option value="Bronze">Bronze</option>
         <option value="New">New</option>
       </select>
 
-      <label for="totalPoints">Total Points</label>
-      <input type="number" id="totalPoints" name="totalPoints" required>
+      <label for="totPoints">Total Points</label>
+      <input type="number" id="totPoints" name="totPoints" required>
 
       <label for="dob">Date of Birth</label>
       <input type="date" id="dob" name="dob" required>
 
-      <label for="addressLine01">Address Line 01</label>
-      <input type="text" id="addressLine01" name="addressLine01" required>
+      <label for="addressLine1">Address Line 01</label>
+      <input type="text" id="addressLine1" name="addressLine1" autocomplete="addressLine1" required>
 
-      <label for="addressLine02">Address Line 02</label>
-      <input type="text" id="addressLine02" name="addressLine02">
+      <label for="addressLine2">Address Line 02</label>
+      <input type="text" id="addressLine2" name="addressLine2" autocomplete="addressLine2">
 
-      <label for="addressLine03">Address Line 03</label>
-      <input type="text" id="addressLine03" name="addressLine03">
+      <label for="addressLine3">Address Line 03</label>
+      <input type="text" id="addressLine3" name="addressLine3" autocomplete="addressLine3">
 
-      <label for="addressLine04">Address Line 04</label>
-      <input type="text" id="addressLine04" name="addressLine04">
+      <label for="addressLine4">Address Line 04</label>
+      <input type="text" id="addressLine4" name="addressLine4" autocomplete="addressLine4">
 
-      <label for="addressLine05">Address Line 05</label>
-      <input type="text" id="addressLine05" name="addressLine05">
+      <label for="addressLine5">Address Line 05</label>
+      <input type="text" id="addressLine5" name="addressLine5" autocomplete="addressLine5">
 
-      <label for="contactNo">Contact No.</label>
-      <input type="tel" id="contactNo" name="contactNo" required>
+      <label for="contact">Contact No.</label>
+      <input type="tel" id="contact" name="contact" required>
 
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
+      <input type="text" id="email" name="email" autocomplete="email" required>
 
-      <label for="recentPurchaseDateTime">Recent Purchase Date and Time</label>
-      <input type="datetime-local" id="recentPurchaseDateTime" name="recentPurchaseDateTime" required>
+      <label for="purchaseDateTime">Recent Purchase Date and Time</label>
+      <input type="datetime-local" id="purchaseDateTime" name="purchaseDateTime" required>
 
-      <button type="button" class="btn btn-success">Save</button>
-      <button type="button" class="btn btn-danger">Delete</button>
-      <button type="button" class="btn btn-warning">Update</button>
+      <button type="button" id="btnAddCustomer" class="btn btn-success">Save</button>
+      <button type="button" id="btnDeleteCustomer" class="btn btn-danger">Delete</button>
+      <button type="button" id="btnUpdateCustomer" class="btn btn-warning">Update</button>
     </form>
   </div>
 
@@ -203,7 +203,7 @@
       <th>Recent Purchase Date and Time</th>
     </tr>
     </thead>
-    <tbody id="customerTableBody">
+    <tbody id="customerTable">
     <!-- Customer data will be populated here -->
     </tbody>
   </table>
@@ -211,10 +211,260 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="../assets/bootstrap/js/jquery-3.7.1.min.js"></script>
 <script>
   function goBack() {
     window.history.back();
   }
+
+
+    let cusBaseUrl = "http://localhost:8080/";
+
+    // Load all customers and set purchaseDate to current date and time
+    loadAllCustomer();
+
+    function generateCustomerID() {
+      $("#customerCode").val("C00-001");
+      $.ajax({
+        url: cusBaseUrl + "customer/nextId",
+        method: "GET",
+        contentType: "application/json",
+        dataType: "json",
+        success: function (resp) {
+          let id = resp.value;
+          console.log("id" +id);
+
+          if (id === null){
+            $("#customerCode").val("C00-001" );
+          } else {
+            let tempId = parseInt(id.split("-")[1]);
+            tempId = tempId + 1;
+            if (tempId <= 9) {
+              $("#customerCode").val("C00-00" + tempId);
+            } else if (tempId <= 99) {
+              $("#customerCode").val("C00-0" + tempId);
+            } else {
+              $("#customerCode").val("C00-" + tempId);
+            }
+          }
+        },
+        error: function (ob, statusText, error) {
+
+        }
+      });
+    }
+
+    $("#btnAddCustomer").click(function () {
+      // Set purchaseDate field to current date and time
+      $('#purchaseDateTime').val(new Date().toISOString().slice(0, 19).replace('T', ' '));
+
+      let formData = $("#customerForm").serializeArray();
+      $.ajax({
+        url: cusBaseUrl + "customer",
+        method: "POST",
+        data: formData,
+        dataType: "json",
+        success: function (res) {
+          saveUpdateAlert("Customer", res.message);
+          loadAllCustomer();
+        },
+        error: function (xhr, status, error) {
+          unSuccessUpdateAlert("Customer", JSON.parse(xhr.responseText).message);
+        }
+      });
+    });
+
+    function setTextFieldValuesC(customerCode, customerName, gender, joinDate, level, totPoint, dob, addressLine1, addressLine2, addressLine3, addressLine4, addressLine5, contact, email, purchaseDateTime) {
+      $("#customerCode").val(customerCode);
+      $("#customerName").val(customerName);
+      $("#gender").val(gender);
+      $("#joinDate").val(joinDate);
+      $("#level").val(level);
+      $("#totPoint").val(totPoint);
+      $("#dob").val(dob);
+      $("#addressLine1").val(addressLine1);
+      $("#addressLine2").val(addressLine2);
+      $("#addressLine3").val(addressLine3);
+      $("#addressLine4").val(addressLine4);
+      $("#addressLine5").val(addressLine5);
+      $("#contact").val(contact);
+      $("#email").val(email);
+      $("#purchaseDateTime").val(purchaseDateTime);
+
+      $("#customerCode").focus();
+      $("#btnAddCustomer").attr('disabled', false);
+      $("#btnUpdateCustomer").attr('disabled', false);
+      $("#btnDeleteCustomer").attr('disabled', false);
+    }
+
+    function loadAllCustomer() {
+      $("#customerTable").empty();
+      // Set purchaseDate field to current date and time
+      $('#purchaseDateTime').val(new Date().toISOString().slice(0, 19).replace('T', ' '));
+
+      $.ajax({
+        url: cusBaseUrl + "customer",
+        method: "GET",
+        dataType: "json",
+        success: function (res) {
+          for (let i of res.data) {
+            let customerCode = i.customerCode;
+            let customerName = i.customerName;
+            let gender = i.gender;
+            let joinDate = i.joinDate;
+            let level = i.level;
+            let totPoints = i.totPoints;
+            let dob = i.dob;
+            let addressLine1 = i.addressLine1 ;
+            let addressLine2 = i.addressLine2 ;
+            let addressLine3 = i.addressLine3 ;
+            let addressLine4 = i.addressLine4 ;
+            let addressLine5 = i.addressLine5 ;
+            let contact = i.contact;
+            let email = i.email;
+            let purchaseDateTime = i.purchaseDateTime;
+
+            let row = <tr><td>${customerCode}</td><td>${customerName}</td><td>${gender}</td><td>${joinDate}</td><td>${level}</td><td>${totPoints}</td><td>${dob}</td><td>${addressLine1}</td><td>${addressLine2}</td><td>${addressLine3}</td><td>${addressLine4}</td><td>${addressLine5}</td><td>${contact}</td><td>${email}</td><td>${purchaseDateTime}</td></tr>;
+            $("#customerTable").append(row);
+          }
+          blindClickEventsC();
+          generateCustomerID();
+          setTextFieldValuesC("", "", "", "", "", "", "", "", "","","","","", "","");
+          console.log(res.message);
+        },
+        error: function (error) {
+          let message = JSON.parse(error.responseText).message;
+          console.log(message);
+        }
+      });
+    }
+
+
+    function blindClickEventsC() {
+      $("#customerTable").on("click", "tr", function () {
+        let customerCode = $(this).children().eq(0).text();
+        let customerName = $(this).children().eq(1).text();
+        let gender = $(this).children().eq(2).text();
+        let joinDate = $(this).children().eq(3).text();
+        let level = $(this).children().eq(4).text();
+        let totPoints = $(this).children().eq(5).text();
+        let dob = $(this).children().eq(6).text();
+        let addressLine1 = $(this).children().eq(7).text();
+        let addressLine2 = $(this).children().eq(8).text();
+        let addressLine3 = $(this).children().eq(9).text();
+        let addressLine4 = $(this).children().eq(10).text();
+        let addressLine5 = $(this).children().eq(11).text();
+        let contact = $(this).children().eq(12).text();
+        let email = $(this).children().eq(13).text();
+        let purchaseDateTime = $(this).children().eq(14).text();
+
+        // Set values to respective input fields
+        $("#customerCode").val(customerCode);
+        $("#customerName").val(customerName);
+        $("#gender").val(gender);
+        $("#joinDate").val(joinDate);
+        $("#level").val(level);
+        $("#totPoints").val(totPoints);
+        $("#dob").val(dob);
+        $("#addressLine1").val(addressLine1);
+        $("#addressLine2").val(addressLine2);
+        $("#addressLine3").val(addressLine3);
+        $("#addressLine4").val(addressLine4);
+        $("#addressLine5").val(addressLine5);
+        $("#contact").val(contact);
+        $("#email").val(email);
+        $("#purchaseDateTime").val(purchaseDateTime);
+
+        // Enable buttons
+        $("#btnAddCustomer").attr('disabled', false);
+        $("#btnUpdateCustomer").attr('disabled', false);
+        $("#btnDeleteCustomer").attr('disabled', false);
+      });
+    }
+
+    $("#btnUpdateCustomer").click(function () {
+      let formData = $("#customerForm").serialize();
+
+      $.ajax({
+        url: cusBaseUrl + "customer",
+        method: "PUT",
+        data: formData,
+        dataType: "json",
+        success: function (res) {
+          saveUpdateAlert("Customer updated", res.message);
+          loadAllCustomer();
+        },
+        error: function (xhr, status, error) {
+          unSuccessUpdateAlert("Customer update failed", JSON.parse(xhr.responseText).message);
+        }
+      });
+    });
+
+    $("#btnDeleteCustomer").click(function () {
+      let id = $("#customerCode").val();
+      $.ajax({
+        url: cusBaseUrl + "customer?customerCode=" + id,
+        method: "DELETE",
+        dataType: "json",
+        success: function (resp) {
+          saveUpdateAlert("Customer", resp.message);
+          loadAllCustomer();
+        },
+        error: function (xhr, status, error) {
+          let message = JSON.parse(xhr.responseText).message;
+          unSuccessUpdateAlert("Customer", message);
+        }
+      });
+    });
+
+    $("#search_CId").on("keypress", function (event) {
+      if (event.which === 13) {
+        var search = $("#search_CId").val();
+        $("#customerTable").empty();
+        $.ajax({
+          url: cusBaseUrl + "customer/search",
+          method: "GET",
+          contentType: "application/json",
+          dataType: "json",
+          data: { code: search }, // Send the search parameter as an object
+          success: function (res) {
+            console.log(res);
+            if (res) {
+              let customerCode = res.customerCode;
+              let customerName = res.customerName;
+              let gender = res.gender;
+              let joinDate = res.joinDate;
+              let level = res.level;
+              let totPoints = res.totPoints;
+              let dob = res.dob;
+              let addressLine1 = res.addressLine1 ;
+              let addressLine2 = res.addressLine2 ;
+              let addressLine3 = res.addressLine3 ;
+              let addressLine4 = res.addressLine4 ;
+              let addressLine5 = res.addressLine5 ;
+              let contact = res.contact;
+              let email = res.email;
+              let purchaseDateTime = res.purchaseDateTime;
+
+              let row = "<tr><td>" + customerCode + "</td><td>" + customerName + "</td><td>" + gender + "</td><td>" + joinDate + "</td><td>" + level + "</td><td>" + totPoints + "</td><td>" + dob + "</td><td>" + addressLine1 + "</td><td>" + addressLine2 + "</td><td>" + addressLine3 + "</td><td>" + addressLine4 + "</td><td>" + addressLine5 + "</td><td>" + contact + "</td><td>" + email + "</td><td>" + purchaseDateTime + "</td></tr>";
+              $("#customerTable").append(row);
+              blindClickEventsC();
+            } else {
+              // No data found
+              console.log("No data found");
+              // Handle this case if required
+            }
+          },
+          error: function (xhr, status, error) {
+            console.error("Error:", error);
+            loadAllCustomer(); // Load all customers as fallback
+            let message = xhr.responseJSON ? xhr.responseJSON.message : "An error occurred";
+            emptyMassage(message);
+          }
+        });
+      }
+    });
+
 </script>
 
 </body>
